smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/resources.flattened.smithy
$version: "2.0"

namespace smithy.example

@internal
resource MixedResource {}
